--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -26,8 +26,8 @@
     "alwaysStrict": true, // 以严格模式检查每个模块，并在每个文件里加入 'use strict'
 
     /* 额外的检查 */
-    "noUnusedLocals": true, // 有未使用的变量时，抛出错误
-    "noUnusedParameters": true, // 有未使用的参数时，抛出错误
+    "noUnusedLocals": false, // 有未使用的变量时，抛出错误
+    "noUnusedParameters": false, // 有未使用的参数时，抛出错误
     "noImplicitReturns": true, // 并不是所有函数里的代码都有返回值时，抛出错误
     "noFallthroughCasesInSwitch": true, // 报告 switch 语句的 fallthrough 错误。（即，不允许 switch 的 case 语句贯穿）
 
